--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
- font-family: 'Montserrat', sans-serif;
+ 	font-family: 'Lato', sans-serif;
     font-size: 16px;
     font-weight: 400;
     background-color: #232325;
@@ -19,6 +19,7 @@ body {
 }
 .main-heading{
     font-size: 25px;
+	font-weight: bold;
 }
 
 /* Content Box */
@@ -44,7 +45,7 @@ body {
     border-radius: 100%;
     border:5px solid #76b328;
     display: inline-block;
-    
+    margin: 5px;
 
 }
 
